# HotPlugPP

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  README.md  check-format.bat  check-format.cmake  check-format.sh  format-code.cmake  format-code.sh
.github/: mlc_config.json
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  docs.yml  file-naming.yml  release.yml  stale.yml
docs/: API.md  BUILD.md  TUTORIAL.md
examples/: CMakeLists.txt  host_app.cpp
examples/math_plugin/: MathPlugin.cpp  math_plugin.cpp
examples/sample_plugin/: SamplePlugin.cpp  sample_plugin.cpp
include/hotplug/: IPlugin.hpp  PluginLoader.hpp
include/hotplugpp/: IPlugin.hpp  PluginLoader.hpp  file_watcher.hpp  i_plugin.hpp  logger.hpp  plugin_loader.hpp
scripts/: check-file-naming.sh  check-format.cmake  find-clang-format.cmake  find-source-files.cmake  format-code.bat  format-code.cmake  format-code.sh
src/: CMakeLists.txt  PluginLoader.cpp  file_watcher.cpp  logger.cpp  plugin_loader.cpp
tests/: CMakeLists.txt  IPluginTests.cpp  IntegrationTests.cpp  PluginLoaderTests.cpp  VersionTests.cpp  file_watcher_tests.cpp  i_plugin_tests.cpp  integration_tests.cpp  logger_tests.cpp  plugin_loader_tests.cpp  version_tests.cpp
tests/test_plugin/: FailingPlugin.cpp  TestPlugin.cpp  failing_plugin.cpp  test_plugin.cpp
wiki/: API.md  BUILD.md  CONTRIBUTING.md  Home.md  MIGRATION_GUIDE.md  TUTORIAL.md  _Sidebar.md
